--- a/index.html
+++ b/index.html
@@ -292,6 +292,17 @@
                     <p class="text-slate-600 text-sm">"Chúc thầy 20/11 ý nghĩa, nhận được thật nhiều quà và lời chúc tốt
                         đẹp nhất!"</p>
                 </div>
+
+                <div class="glass-card p-6 rounded-xl hover:-translate-y-1 transition-transform">
+                    <div class="flex items-center gap-3 mb-3">
+                        <div
+                            class="w-8 h-8 rounded-full bg-red-100 text-red-600 flex items-center justify-center font-bold text-sm">
+                            L</div>
+                        <h3 class="font-bold text-dark">Linh</h3>
+                    </div>
+                    <p class="text-slate-600 text-sm">"Chúc thầy có nhiều sức khoẻ và có một ngày thật ý nghĩa. Em rất
+                        vui khi được là học sinh của thầy."</p>
+                </div>
             </div>
 
             <div class="mt-8 flex justify-center gap-4">
