--- a/index.html
+++ b/index.html
@@ -129,75 +129,110 @@
         </div>
     </div>
 
-    <!-- Step 3: Gallery -->
-    <div id="step-3" class="step-section fixed inset-0 flex-col items-center justify-center p-4 z-20 overflow-y-auto">
-        <div class="container mx-auto max-w-6xl py-10">
-            <div class="text-center mb-10">
-                <h2 class="text-3xl md:text-4xl font-bold text-dark mb-2">Khoảnh khắc <span class="text-primary">Đáng
+    <!-- Step 3: Gallery (Slideshow) -->
+    <div id="step-3" class="step-section fixed inset-0 flex-col items-center justify-center p-4 z-20 overflow-hidden">
+        <div class="container mx-auto max-w-4xl h-full flex flex-col justify-center">
+            <div class="text-center mb-4 md:mb-8">
+                <h2 class="text-2xl md:text-4xl font-bold text-dark mb-2">Khoảnh khắc <span class="text-primary">Đáng
                         Nhớ</span></h2>
-                <p class="text-slate-500">Những hình ảnh tuyệt vời của thầy</p>
+                <p class="text-slate-500 text-sm md:text-base">Những hình ảnh tuyệt vời của thầy</p>
             </div>
 
+            <!-- Carousel Container -->
             <div
-                class="grid grid-cols-1 md:grid-cols-3 gap-6 px-4 md:px-0 max-h-[60vh] overflow-y-auto custom-scrollbar pb-4">
-                <!-- Gallery Items -->
-                <div class="group relative rounded-2xl overflow-hidden shadow-lg aspect-[3/4]">
-                    <img src="images/1.jpg"
-                        class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
-                    <div
-                        class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-4">
-                        <span class="text-white font-medium">Phong thái đĩnh đạc</span>
+                class="relative w-full max-w-md mx-auto aspect-[3/4] md:aspect-video bg-white rounded-2xl shadow-2xl overflow-hidden group">
+                <!-- Slides -->
+                <div id="carousel-track" class="flex transition-transform duration-500 ease-out h-full">
+                    <!-- Slide 1 -->
+                    <div class="w-full h-full flex-shrink-0 relative">
+                        <img src="images/1.jpg" alt="Phong thái đĩnh đạc" class="w-full h-full object-cover">
+                        <div
+                            class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-6 text-white">
+                            <h3 class="font-bold text-lg">Phong thái đĩnh đạc</h3>
+                        </div>
+                    </div>
+                    <!-- Slide 2 -->
+                    <div class="w-full h-full flex-shrink-0 relative">
+                        <img src="images/2.jpg" alt="Say sưa giảng bài" class="w-full h-full object-cover">
+                        <div
+                            class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-6 text-white">
+                            <h3 class="font-bold text-lg">Say sưa giảng bài</h3>
+                        </div>
+                    </div>
+                    <!-- Slide 3 -->
+                    <div class="w-full h-full flex-shrink-0 relative">
+                        <img src="images/3.jpg" alt="Tận tâm chỉ dẫn" class="w-full h-full object-cover">
+                        <div
+                            class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-6 text-white">
+                            <h3 class="font-bold text-lg">Tận tâm chỉ dẫn</h3>
+                        </div>
+                    </div>
+                    <!-- Slide 4 -->
+                    <div class="w-full h-full flex-shrink-0 relative">
+                        <img src="images/4.jpg" alt="Lịch lãm" class="w-full h-full object-cover">
+                        <div
+                            class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-6 text-white">
+                            <h3 class="font-bold text-lg">Lịch lãm</h3>
+                        </div>
+                    </div>
+                    <!-- Slide 5 -->
+                    <div class="w-full h-full flex-shrink-0 relative">
+                        <img src="images/5.jpg" alt="Rạng rỡ" class="w-full h-full object-cover">
+                        <div
+                            class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-6 text-white">
+                            <h3 class="font-bold text-lg">Rạng rỡ</h3>
+                        </div>
+                    </div>
+                    <!-- Slide 6 -->
+                    <div class="w-full h-full flex-shrink-0 relative">
+                        <img src="images/6.jpg" alt="Gen Z Style" class="w-full h-full object-cover">
+                        <div
+                            class="absolute bottom-0 left-0 right-0 bg-gradient-to-t from-black/70 to-transparent p-6 text-white">
+                            <h3 class="font-bold text-lg">Gen Z Style</h3>
+                        </div>
                     </div>
                 </div>
-                <div class="group relative rounded-2xl overflow-hidden shadow-lg aspect-[3/4]">
-                    <img src="images/2.jpg"
-                        class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
-                    <div
-                        class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-4">
-                        <span class="text-white font-medium">Say sưa giảng bài</span>
-                    </div>
-                </div>
-                <div class="group relative rounded-2xl overflow-hidden shadow-lg aspect-[3/4]">
-                    <img src="images/3.jpg"
-                        class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
-                    <div
-                        class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-4">
-                        <span class="text-white font-medium">Tận tâm chỉ dẫn</span>
-                    </div>
-                </div>
-                <div class="group relative rounded-2xl overflow-hidden shadow-lg aspect-[3/4]">
-                    <img src="images/4.jpg"
-                        class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
-                    <div
-                        class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-4">
-                        <span class="text-white font-medium">Lịch lãm</span>
-                    </div>
-                </div>
-                <div class="group relative rounded-2xl overflow-hidden shadow-lg aspect-[3/4]">
-                    <img src="images/5.jpg"
-                        class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
-                    <div
-                        class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-4">
-                        <span class="text-white font-medium">Rạng rỡ</span>
-                    </div>
-                </div>
-                <div class="group relative rounded-2xl overflow-hidden shadow-lg aspect-[3/4]">
-                    <img src="images/6.jpg"
-                        class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
-                    <div
-                        class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-4">
-                        <span class="text-white font-medium">Gen Z Style</span>
-                    </div>
+
+                <!-- Navigation Buttons -->
+                <button id="prev-slide" title="Previous Slide"
+                    class="absolute left-2 top-1/2 -translate-y-1/2 w-10 h-10 bg-white/80 rounded-full shadow-lg flex items-center justify-center text-primary hover:bg-white transition-colors z-10">
+                    <i class="fas fa-chevron-left"></i>
+                </button>
+                <button id="next-slide" title="Next Slide"
+                    class="absolute right-2 top-1/2 -translate-y-1/2 w-10 h-10 bg-white/80 rounded-full shadow-lg flex items-center justify-center text-primary hover:bg-white transition-colors z-10">
+                    <i class="fas fa-chevron-right"></i>
+                </button>
+
+                <!-- Indicators -->
+                <div class="absolute bottom-4 left-0 right-0 flex justify-center gap-2 z-10">
+                    <button title="Slide 1"
+                        class="w-2 h-2 rounded-full bg-white/50 hover:bg-white transition-colors indicator active"
+                        data-index="0"></button>
+                    <button title="Slide 2"
+                        class="w-2 h-2 rounded-full bg-white/50 hover:bg-white transition-colors indicator"
+                        data-index="1"></button>
+                    <button title="Slide 3"
+                        class="w-2 h-2 rounded-full bg-white/50 hover:bg-white transition-colors indicator"
+                        data-index="2"></button>
+                    <button title="Slide 4"
+                        class="w-2 h-2 rounded-full bg-white/50 hover:bg-white transition-colors indicator"
+                        data-index="3"></button>
+                    <button title="Slide 5"
+                        class="w-2 h-2 rounded-full bg-white/50 hover:bg-white transition-colors indicator"
+                        data-index="4"></button>
+                    <button title="Slide 6"
+                        class="w-2 h-2 rounded-full bg-white/50 hover:bg-white transition-colors indicator"
+                        data-index="5"></button>
                 </div>
             </div>
 
-            <div class="mt-8 flex justify-center gap-4">
+            <div class="mt-6 md:mt-8 flex justify-center gap-4">
                 <button onclick="nextStep(2)"
-                    class="px-6 py-3 rounded-full text-slate-500 hover:bg-slate-100 transition-colors">
+                    class="px-6 py-3 rounded-full text-slate-500 hover:bg-slate-100 transition-colors text-sm md:text-base">
                     <i class="fas fa-arrow-left"></i> Quay lại
                 </button>
                 <button onclick="nextStep(4)"
-                    class="px-8 py-3 bg-primary text-white font-bold rounded-full shadow-lg hover:bg-sky-600 transition-colors flex items-center gap-2">
+                    class="px-8 py-3 bg-primary text-white font-bold rounded-full shadow-lg hover:bg-sky-600 transition-colors flex items-center gap-2 text-sm md:text-base">
                     Đọc lời chúc <i class="fas fa-heart"></i>
                 </button>
             </div>
